# LeafraSDK

./: .gitattributes  .gitignore  .gitmodules  SDK_INTEGRATION_GUIDE.md  test_content.txt  test_icu
.git.bfg-report/2025-06-08/14-44-30/protected-dirt/: 67d677a2-HEAD.csv
corecpp/src/unit_tests/llamacpp/: CMakeLists.txt  README.md  test_llamacpp_simple.cpp
example/Leafra/: App.tsx  BUILD_INSTRUCTIONS.md  README.md  app.json  metro.config.js  package-lock.json  package.json  react-native.config.js  test-integration.js
example/Leafra/android/: settings.gradle
example/Leafra/android/app/: build.gradle
example/Leafra/android/app/src/main/java/com/leafra/app/: MainActivity.kt  MainApplication.kt
example/Leafra/android/app/src/main/res/values/: strings.xml
example/Leafra/components/: ChatInterface.tsx  FileBrowserModal.tsx  LeafraSDKDocuchat.tsx  SearchResultsModal.tsx  SettingsModal.tsx  TestInterface.tsx
example/Leafra/config/: sdkConfig.ts
example/Leafra/ios/: Podfile  Podfile.properties.json
example/Leafra/ios/DokuChat/: Info.plist
example/Leafra/ios/DokuChat.xcodeproj/: project.pbxproj
example/Leafra/ios/DokuChat.xcodeproj/xcshareddata/xcschemes/: DokuChat.xcscheme
example/Leafra/ios/DokuChat.xcworkspace/: contents.xcworkspacedata
example/Leafra/ios/Leafra/: CMakeLists.txt  Info.plist
example/Leafra/ios/Leafra.xcodeproj/: project.pbxproj
example/Leafra/ios/Leafra.xcodeproj/xcshareddata/xcschemes/: Leafra.xcscheme
example/Leafra/ios/Leafra.xcworkspace/: contents.xcworkspacedata
example/example_files/: anne_of_green_gables link.txt  gift_of_the_magi.txt
example/sdkcmdapp/: CMakeLists.txt  README.md  sdkcmdline.cpp
sdk/: CMakeLists.txt  LeafraSDK.podspec  LeafraSDKConfig.cmake.in  README.md  README_REACT_NATIVE.md  build.sh
sdk/corecpp/: CMakeLists.txt  Info.plist.in  Resources.plist.in
sdk/corecpp/config/: leafra_sdk_config.json
sdk/corecpp/include/leafra/: config_loader.h  data_processor.h  leafra_chunker.h  leafra_core.h  leafra_coreml.h  leafra_debug.h  leafra_faiss.h  leafra_llamacpp.h  leafra_sentencepiece.h  leafra_sqlite.h  leafra_unicode.h  math_utils.h  platform_utils.h  types.h
sdk/corecpp/sdkcmdapp/: README.md  sdkcmdline.cpp
sdk/corecpp/src/: TOKEN_CHUNKING_README.md  data_processor.cpp  leafra_chunker.cpp  leafra_core.cpp  leafra_coreml.mm  leafra_debug.cpp  leafra_faiss.cpp  leafra_filemanager.cpp  leafra_llamacpp.cpp  leafra_parsing.cpp  leafra_parsing_adapter_docx.cpp  leafra_parsing_adapter_excel.cpp  leafra_parsing_adapter_pdf.cpp  leafra_parsing_adapter_txt.cpp  leafra_sentencepiece.cpp  leafra_sqlite.cpp  leafra_unicode.cpp  leafra_unicode_cacher.cpp  logger.cpp  math_utils.cpp  platform_utils.cpp
sdk/corecpp/src/leafra/: leafra_unicode.h
sdk/corecpp/src/unit_tests/: CMakeLists.txt  README.md
sdk/corecpp/src/unit_tests/chunker/: CMakeLists.txt  README.md  test_advanced_chunking.cpp  test_debug_functionality.cpp  test_leafra_chunker.cpp  test_token_chunking.cpp  test_unified_api.cpp  test_utf8_chunking.cpp
sdk/corecpp/src/unit_tests/coreml/: CMakeLists.txt  README.md  test_coreml_model.cpp
sdk/corecpp/src/unit_tests/filemanager/: CMakeLists.txt  Info.plist  README.md  test_filemanager_basic.cpp  test_filemanager_edge_cases.cpp  test_filemanager_operations.cpp  test_filemanager_storage_types.cpp
sdk/corecpp/src/unit_tests/llamacpp/: CMakeLists.txt  Info.plist  README.md  test_llamacpp_simple.cpp
sdk/corecpp/src/unit_tests/sqlite/: CMakeLists.txt  Info.plist  README.md  test_sqlite_advanced.cpp  test_sqlite_basic.cpp
sdk/docs_internal/: CHAT_TEMPLATES_QUICK_REFERENCE.md  CHUNKING_INTEGRATION_README.md  Faiss-mobile-integration.README  ICU_INTEGRATION.md  LLM_GUIDE.md  README_REACT_NATIVE.md  SDK_BUILD_README.md  SDK_INTEGRATION_GUIDE.md  SentencePiece_Integration_README.md
sdk/install/ios/Frameworks/LeafraCore.framework/: Info.plist
sdk/install/ios/Frameworks/LeafraCore.framework/Headers/: leafra_chunker.h  leafra_coreml.h  leafra_faiss.h  leafra_filemanager.h  leafra_parsing.h  leafra_sentencepiece.h  leafra_sqlite.h  logger.h  types.h
sdk/install/ios/lib/cmake/LeafraSDK/: LeafraSDKConfig.cmake  LeafraSDKTargets-debug.cmake  LeafraSDKTargets-release.cmake  LeafraSDKTargets.cmake
sdk/ios/: LeafraSDKBridge.h  LeafraSDKBridge.mm
sdk/native/android/: README.md
sdk/native/ios/: README.md
sdk/native/macos/: README.md
sdk/native/windows/: README.md
sdk/react-native/: ICU_REACT_NATIVE_INTEGRATION.md  README.md  package.json  react-native-leafra-sdk.podspec  tsconfig.build.json  tsconfig.json
sdk/react-native/android/: CMakeLists.txt  README.md
sdk/react-native/common/src/: index.ts
sdk/react-native/ios/: CMakeLists.txt  LeafraSDK.modulemap  LeafraSDKBridge.h  LeafraSDKBridge.mm  LeafraSDKModule.h  LeafraSDKModule.mm  README.md
sdk/react-native/macos/: README.md
sdk/react-native/src/: index.ts
sdk/react-native/windows/: CMakeLists.txt  README.md
sdk/utility/model_conversion/: HFconversion.ipynb  e5_complete.pte
sdk/utility/model_conversion/coreml_converter/: coreml-HFconversion.ipynb  requirements.txt
sdk/utility/model_conversion/coreml_converter/e5_embedding_model.mlpackage/: Manifest.json
sdk/utility/model_conversion/executorch/: Executorch-HFconversion.ipynb  requirements.txt  venv_requirements.txt  version_test.pte
sdk/utility/model_conversion/executorch/.ipynb_checkpoints/: Executorch-HFconversion-checkpoint.ipynb
sdk/utility/model_conversion/tflite_converter/: Tflite-HFconversion.ipynb  requirements.txt
sdk/utility/model_conversion/tflite_viewer/: venv_viewer_requirements.txt
sdk/utility/pyrag/: chunk_verifier.ipynb  my_streamlit_app.py  pyrag.ipynb  requirements.txt
test_sqlite_advanced.app/: Info.plist
test_sqlite_basic.app/: Info.plist
